add shopping cart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
       <div class="cart-details">
         <div class="add-to-cart">
           <ul class="unstyled-list list-inline">
-            <li><span class="cart"> </span>
+            <li><span class="cart"></span>
               <ul class="cart-sub">
-                <li><p>fdsfds</p></li>
+                <li><p>{{totalProducts}}</p></li>
               </ul>
             </li>
           </ul>
