--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -49,7 +49,7 @@
           <div class="clearfix"> </div>
           <div class="product-cart-share">
             <div class="add-cart-btn">
-              <input type="button" value="Add to cart" />
+              <input type="button" value="Add to cart" (click)="addToCart()" />
             </div>
             <ul class="product-share text-right">
               <h3>Share This:</h3>
