shopping cart update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <div class="cart-details">
         <div class="add-to-cart">
           <ul class="unstyled-list list-inline">
-            <li><span class="cart"></span>
+            <li><a style="cursor: pointer" (click)="openCart()"><span class="cart"></span></a>
               <ul class="cart-sub">
                 <li><p>{{totalProducts}}</p></li>
               </ul>
