--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -36,13 +36,13 @@
           <div class="product-size-qty">
             <div class="pro-size">
               <span>Size:</span>
-              <select>
+              <select [(ngModel)]="size">
                 <option *ngFor="let item of lstSizes">{{item}}</option>
               </select>
             </div>
             <div class="pro-qty">
               <span>Qty:</span>
-              <input style="width: 50%" type="number">
+              <input style="width: 50%" type="number" [(ngModel)]="quantity">
             </div>
             <div class="clearfix"> </div>
           </div>
@@ -74,7 +74,7 @@
         <app-my-tab [tabTitle]="'Product overview'">
           <div id="tab-1" class="product-complete-info">
             <h3>DESCRIPTION:</h3>
-            <p>{{product.description}}</p>
+            <p>{{product.desciption}}</p>
           </div>
         </app-my-tab>
         <app-my-tab [tabTitle]="'Features'">
@@ -91,22 +91,23 @@
         </app-my-tab>
         <app-my-tab [tabTitle]="'Customer reviews'">
           <div id="tab-3"  class="product-complete-info">
-            <h3>DESCRIPTION:</h3>
-            <p>With its beautiful premium leather, lace-up oxford styling, recycled rubber outsoles and 9-inch height, this Earthkeepers City Premium style is an undeniably handsome boot. To complement its rustic, commanding outer appearance, we've paid attention to the inside as well - by adding SmartWool® faux shearling to the linings and crafting the footbed using our exclusive anti-fatigue comfort foam technology to absorb shock. Imported.</p>
-            <span>DETAILS:</span>
-            <div class="product-fea">
-              <p>100% organic cotton laces</p>
-              <p>SmartWool® fabric-lined anti-fatigue footbed provides superior, all-day comfort and climate control</p>
-              <p>Timberland® exclusive Gripstick™ and Green Rubber™ outsole is made with 42% recycled rubber</p>
-              <p>Premium burnished full-grain leather and suede upper</p>
-              <p>Leather is from a tannery rated Silver for its water, energy and waste-management practices</p>
-              <p>Leather lining and footbed for a premium feel and optimal comfort</p>
-              <p>SmartWool® faux shearling lining is made with 60% merino wool and 40% PET</p>
-              <p>Reflective insole board for additional warmth under foot</p>
-              <p>100% organic cotton laces</p>
-              <p>SmartWool® fabric-lined anti-fatigue footbed provides superior, all-day comfort and climate control</p>
-              <p>Timberland® exclusive Gripstick™ and Green Rubber™ outsole is made with 42% recycled rubber</p>
-            </div>
+            <!--<h3>DESCRIPTION:</h3>-->
+            <!--<p>With its beautiful premium leather, lace-up oxford styling, recycled rubber outsoles and 9-inch height, this Earthkeepers City Premium style is an undeniably handsome boot. To complement its rustic, commanding outer appearance, we've paid attention to the inside as well - by adding SmartWool® faux shearling to the linings and crafting the footbed using our exclusive anti-fatigue comfort foam technology to absorb shock. Imported.</p>-->
+            <!--<span>DETAILS:</span>-->
+            <!--<div class="product-fea">-->
+              <!--<p>100% organic cotton laces</p>-->
+              <!--<p>SmartWool® fabric-lined anti-fatigue footbed provides superior, all-day comfort and climate control</p>-->
+              <!--<p>Timberland® exclusive Gripstick™ and Green Rubber™ outsole is made with 42% recycled rubber</p>-->
+              <!--<p>Premium burnished full-grain leather and suede upper</p>-->
+              <!--<p>Leather is from a tannery rated Silver for its water, energy and waste-management practices</p>-->
+              <!--<p>Leather lining and footbed for a premium feel and optimal comfort</p>-->
+              <!--<p>SmartWool® faux shearling lining is made with 60% merino wool and 40% PET</p>-->
+              <!--<p>Reflective insole board for additional warmth under foot</p>-->
+              <!--<p>100% organic cotton laces</p>-->
+              <!--<p>SmartWool® fabric-lined anti-fatigue footbed provides superior, all-day comfort and climate control</p>-->
+              <!--<p>Timberland® exclusive Gripstick™ and Green Rubber™ outsole is made with 42% recycled rubber</p>-->
+            <!--</div>-->
+            Not review
           </div>
         </app-my-tab>
       </app-my-tabs>
