--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,23 +3,28 @@
     <div class="col-lg-12">
       <div class="card">
         <div style="margin: 15px" class="card-header">
-          <i class="fa fa-align-justify"></i> SHOPPING CART
+          <label><i class="fa fa-align-justify">SHOPPING CART</i></label>
         </div>
         <div class="card-body">
           <table class="table table-striped table-sm">
             <thead>
             <tr>
-              <th *ngFor = "let column of headers">
+              <th *ngFor="let column of headers">
                 {{column}}
               </th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor = "let item of lstRs | slice: ((page-1) * pageSize) : ((page-1) * pageSize + pageSize); let i=index">
-              <td style="width: 50px; height: 80px;"><img width="100%" height="100%" class="img-avatar" src="assets/images/products/{{item.image}}"></td>
+            <tr *ngFor="let item of lstRs | slice: ((page-1) * pageSize) : ((page-1) * pageSize + pageSize); let i=index">
+              <td style="width: 50px; height: 80px;"><img width="100%" height="100%" class="img-avatar"
+                                                          src="assets/images/products/{{item.image}}"></td>
               <td>{{item.name}}</td>
-              <td>{{item.price}}</td>
-              <td><input style="width: 20%" type="number" [(ngModel)]="item.quantity"></td>
+              <td>{{item.price | number}}</td>
+              <td>
+                <label>
+                  <input class="input-quantity" type="text" [(ngModel)]="item.quantity" myCurrencyFormatter/>
+                </label>
+              </td>
               <td>
                 <a (click)="delete(item)" class="myIcons" tooltip="Detele user" placement="bottom">
                   Delete
