--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -80,6 +80,80 @@ ul.cart-sub{
 	top: 55px;
 	left: 0px;
 }
+.cart-count {
+  color: #FFF;
+  position: relative;
+}
+.cart-count em {
+  height: 24px;
+  background-color: red;
+  font-style: normal;
+  padding: 0;
+  border-radius: 50px;
+  position: absolute;
+  top: -5px;
+  right: -14px;
+  width: 24px;
+  text-align: center;
+  line-height: 24px;
+  color: #FFF;
+  font-weight: bold;
+}
+
+.cart-total {
+  padding: 1em;
+  margin: 0;
+  display: flex;
+  flex-flow: row;
+  align-items: normal;
+  justify-content: space-between;
+}
+
+/* Add application styles & imports to this file! */
+
+.product-cart {
+  position: fixed;
+  right: 1em;
+  top: 73px;
+  width: 350px;
+  background-color: #FFF;
+  border: 1px solid #CCC;
+  box-shadow: 0 5px 15px rgba(0,0,0, 0.2);
+}
+
+.product-cart ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.product-cart li {
+  display: flex;
+  flex-flow: row;
+  padding: 1em;
+  border-bottom: 1px solid #CCC;
+  font-size: 14px;
+}
+
+.product-cart img {
+  height: 50px;
+  width: auto;
+  margin-right: 1em;
+}
+
+.product-list__item h4 {
+  font-size: 16px;
+}
+
+.product-list__image {
+  padding: 1em;
+  height: 250px;
+}
+
+.product-list__image img {
+  max-width: 100%;
+}
+
 ul.cart-sub{
 	background:#FFF;
 	padding:0.5em;
@@ -88,7 +162,7 @@ ul.cart-sub li p{
 	color:#EF3626;
 }
 .login-rigister li a.login{
-	color: #444444;
+	color: #fff;
 	font-weight: 600;
 	text-transform: uppercase;
 	margin: 0 0.6em;
@@ -127,6 +201,7 @@ a.rigister span{
 	padding: 0;
 }
 .cart-details{
+  background-color: black;
 	border: 1px solid #FFF;
 	padding: 0.7em 0.3em;
 	border-radius:0.3em;
@@ -1155,10 +1230,12 @@ a.shipping span{
 	color:#585757
 }
 .pro-size{
-	float:left;
+	/*float:left;*/
 }
 .pro-qty input{
-	width:50px;
+	width:120px;
+  border-radius: 0.3em;
+  text-align: right;
 }
 .product-size-qty{
   text-align: right;
