--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <!----top-header---->
   <div class="top-header">
     <div class="logo">
-      <a href="index.html"><img src="assets/images/logo/LOGO-BITIS-HUNTER-01 (Small).png" title="BitisHunter"/></a>
+      <a href="index.html"><img style="max-width: 100%;" src="assets/images/logo/LOGO-BITIS-HUNTER-01 (Small).png" title="BitisHunter"/></a>
     </div>
     <div class="top-header-info">
       <div class="top-contact-info">
@@ -45,6 +45,7 @@
     <div class="clearfix"></div>
   </div>
   <!----//top-header---->
+  <div class="content"></div>
   <!---top-header-nav---->
   <div class="top-header-nav">
     <!----start-top-nav---->
