--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,11 +51,11 @@
     <!----start-top-nav---->
     <nav class="top-nav main-menu">
       <ul class="top-nav">
-        <li><a href="products.html">PRODUCTS </a><span> </span></li>
+        <li><a [routerLink]="['/product-list/', 0, '', 0, 0]">PRODUCTS </a><span> </span></li>
         <li><a href="products.html">CAMPAINGS</a><span> </span></li>
         <li><a href="products.html">SERVICES</a><span> </span></li>
         <li><a href="products.html">BRANDS</a><span> </span></li>
-        <li><a href="products.html">ABOUT US</a></li>
+        <li><a [routerLink]="['/contact']">CONTACT</a></li>
         <div class="clearfix"></div>
       </ul>
       <a href="#" id="pull"><img src="assets/images/nav-icon.png" title="menu"/></a>
