--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,63 @@
-<p>
-  contact works!
-</p>
+<!----contact---->
+<div class="contact-info">
+  <div class="map">
+    <iframe src="https://maps.google.co.in/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265&amp;output=embed"></iframe><br><small><a href="https://maps.google.co.in/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Lighthouse+Point,+FL,+United+States&amp;aq=4&amp;oq=light&amp;sll=26.275636,-80.087265&amp;sspn=0.04941,0.104628&amp;ie=UTF8&amp;hq=&amp;hnear=Lighthouse+Point,+Broward,+Florida,+United+States&amp;t=m&amp;z=14&amp;ll=26.275636,-80.087265" style="color:#666;text-align:left;font-size:12px"></a></small>
+  </div>
+  <div class="container">
+    <div class="contact-grids">
+      <div class="col_1_of_bottom span_1_of_first1">
+        <h5>Address</h5>
+        <ul class="list3">
+          <li>
+            <img src="images/home.png" alt="">
+            <div class="extra-wrap">
+              <p>366 Xuân Thuỷ, Cầu giấy, Hà Nội</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="col_1_of_bottom span_1_of_first1">
+        <h5>Phones</h5>
+        <ul class="list3">
+          <li>
+            <img src="images/phone.png" alt="">
+            <div class="extra-wrap">
+              <p><span>Telephone:</span>090-2234466</p>
+            </div>
+            <img src="images/fax.png" alt="">
+            <div class="extra-wrap">
+              <p><span>FAX:</span>+1 800 589 2587</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="col_1_of_bottom span_1_of_first1">
+        <h5>Email</h5>
+        <ul class="list3">
+          <li>
+            <img src="images/email.png" alt="">
+            <div class="extra-wrap">
+              <p><span class="mail"><a href="mailto:yoursite.com">lyktk18798@gmail.</a></span></p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+    <form>
+      <div class="contact-form">
+        <div class="contact-to">
+          <input type="text" class="text" value="Name..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
+          <input type="text" class="text" value="Email..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}">
+          <input type="text" class="text" value="Subject..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject...';}">
+        </div>
+        <div class="text2">
+          <textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Message..</textarea>
+        </div>
+        <span><input type="submit" class="" value="Send"></span>
+        <div class="clearfix"></div>
+      </div>
+    </form>
+  </div>
+</div>
+<!---//contact---->
