get selling product

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,8 +51,8 @@
     <!----start-top-nav---->
     <nav class="top-nav main-menu">
       <ul class="top-nav">
+        <li><a [routerLink]="['/']">HOME</a><span> </span></li>
         <li><a [routerLink]="['/product-list/', 0, '', 0, 0]">PRODUCTS </a><span> </span></li>
-        <li><a href="products.html">CAMPAINGS</a><span> </span></li>
         <li><a href="products.html">SERVICES</a><span> </span></li>
         <li><a href="products.html">BRANDS</a><span> </span></li>
         <li><a [routerLink]="['/contact']">CONTACT</a></li>
