--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-carousel></app-carousel>
+  <app-carousel [lstSellingProduct]="lstSellingProduct"></app-carousel>
 </div>
 
 <!----content---->
@@ -55,9 +55,8 @@
         </div>
         <div class="clearfix"> </div>
       </div>
-      <!----special-products-grids---->
       <div class="special-products-grids">
-        <div class="col-md-3 special-products-grid text-center" *ngFor="let item of lstProductsSpecials">
+        <div class="col-md-3 special-products-grid text-center" *ngFor="let item of lstSellingProduct">
           <a class="brand-name"  [routerLink]="['/product/',item.id]"><img src="assets/images/branch/b{{item.category.id}}.jpg"  title="name" /></a>
           <a class="product-here" [routerLink]="['/product/',item.id]"><img src="assets/images/products/{{item.image}}" title="product-name" /></a>
           <h4><a [routerLink]="['/product/',item.id]">{{item.name}}</a></h4>
@@ -65,32 +64,8 @@
         </div>
         <div class="clearfix"> </div>
       </div>
-      <!---//special-products-grids---->
     </div>
-    <!----->
-    <!--<div class="special-products all-poroducts latest-products">-->
-      <!--<div class="s-products-head">-->
-        <!--<div class="s-products-head-left">-->
-          <!--<h3>LATEST <span>PRODUCTS</span></h3>-->
-        <!--</div>-->
-        <!--<div class="s-products-head-right">-->
-          <!--<a [routerLink]="['/product-list/', 0, '']"><span> </span>view all products</a>-->
-        <!--</div>-->
-        <!--<div class="clearfix"> </div>-->
-      <!--</div>-->
-      <!----special-products-grids---->
-      <!--<div class="special-products-grids">-->
-        <!--<div class="col-md-3 special-products-grid text-center" *ngFor="let item of lstProductsSpecials">-->
-          <!--<a class="brand-name"  [routerLink]="['/product/',item.id]"><img src="assets/images/branch/b{{item.category.id}}.jpg"  title="name" /></a>-->
-          <!--<a class="product-here" [routerLink]="['/product/',item.id]"><img src="assets/images/products/{{item.image}}" title="product-name" /></a>-->
-          <!--<h4><a [routerLink]="['/product/',item.id]">{{item.name}}</a></h4>-->
-          <!--<a class="product-btn" [routerLink]="['/product/',item.id]"><span>{{item.price}}</span><small>GET NOW</small><label> </label></a>-->
-        <!--</div>-->
-        <!--<div class="clearfix"> </div>-->
-      <!--</div>-->
-      <!---//special-products-grids---->
-    <!--</div>-->
-    <!---//speical-products---->
+
   </div>
   <!----content---->
 <!----container---->
