--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,8 +34,8 @@
         </div>
         <div class="login-rigister">
           <ul class="unstyled-list list-inline">
-            <li><a class="login" href="#">Login</a></li>
-            <li><a class="rigister" href="#">REGISTER <span> </span></a></li>
+            <li><a class="login" [routerLink]="['/login']">Login</a></li>
+            <li><a class="rigister" [routerLink]="['/register']">REGISTER <span> </span></a></li>
             <div class="clearfix"></div>
           </ul>
         </div>
