--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,51 +1,28 @@
 
-<div class="app-body">
-  <main class="main d-flex align-items-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5 mx-auto">
-          <div class="card-group">
-            <div class="card p-4">
-              <div class="card-body">
-                <app-alert></app-alert>
-                <form [formGroup]="loginForm" (ngSubmit)="login()">
-                  <h1>Login</h1>
-                  <p class="text-muted">Sign In to your account</p>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-user"></i></span>
-                    </div>
-                    <input type="text" class="form-control" formControlName="username" placeholder="Email" autocomplete="username" required>
-                  </div>
-                  <div class="input-group mb-4">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-lock"></i></span>
-                    </div>
-                    <input type="password" class="form-control" formControlName="password" placeholder="Password" autocomplete="current-password" required>
-                  </div>
-                  <div class="row">
-                    <div class="col-6">
-                      <button type="submit" class="btn btn-primary px-4">Login</button>
-                    </div>
-                    <div class="col-6 text-right">
-                      <button type="button" class="btn btn-link px-0" (click)="forgotPass()">Forgot password?</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <!--<div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">-->
-              <!--<div class="card-body text-center">-->
-                <!--<div>-->
-                  <!--<h2>Sign up</h2>-->
-                  <!--<p>Sign up to member of us. Come on!</p>-->
-                  <!--<button type="button" class="btn btn-primary active mt-3"  routerLink="/register">Register Now!</button>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          </div>
-        </div>
+  <div id="logreg-forms">
+    <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="login()">
+      <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
+      <div class="social-login">
+        <button class="btn facebook-btn social-btn" type="button"><span>
+          <!--<i class="fab fa-facebook-f"></i>-->
+          Sign in with Facebook</span> </button>
+        <button class="btn google-btn social-btn" type="button"><span>
+          <!--<i class="fab fa-google-plus-g"></i>-->
+          Sign in with Google+</span> </button>
       </div>
-    </div>
-  </main>
-</div>
+      <p style="text-align:center"> OR  </p>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" formControlName="username" required>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password" formControlName="password" required>
+
+      <button class="btn btn-success btn-block" type="submit">
+        <!--<i class="fas fa-sign-in-alt"></i>-->
+        Sign in</button>
+      <a href="#" id="forgot_pswd" (click)="forgotPass()">Forgot password?</a>
+      <hr>
+      <!-- <p>Don't have an account!</p>  -->
+      <button class="btn btn-primary btn-block" type="button" id="btn-signup" routerLink="/register">
+        <!--<i class="fas fa-user-plus"></i>-->
+        Sign up New Account</button>
+    </form>
+  </div>
+
