--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,58 +1,55 @@
-<div class="app-body">
-  <main class="main d-flex align-items-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <div class="card mx-4">
-            <div class="card-body p-4">
-              <form [formGroup]="saveForm">
-                <h1>Forgot password</h1>
-                <p class="text-muted">Enter your email which is registered with us</p>
-                <!--<div class="input-group mb-3">-->
-                  <!--<div class="input-group-prepend">-->
-                    <!--<span class="input-group-text"><i class="icon-user"></i></span>-->
-                  <!--</div>-->
-                  <!--<input type="text" formControlName="fullname" class="form-control" placeholder="Enter fullname.." [ngClass]="{ 'is-invalid': fullnameValid}">-->
-                  <!--<div *ngIf="fullnameValid" class="invalid-feedback">-->
-                    <!--<div *ngIf="fullname.errors.required">Fullname is required</div>-->
-                  <!--</div>-->
-                <!--</div>-->
-                <div class="input-group mb-3">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">@</span>
-                  </div>
-                  <input type="text" formControlName="email" placeholder="Enter email valid.." class="form-control" [ngClass]="{ 'is-invalid': emailValid}" />
-                  <div *ngIf="emailValid" class="invalid-feedback">
-                    <div *ngIf="email.errors.required">Email is required</div>
-                    <div *ngIf="email.errors.email">Email is invalid</div>
-                  </div>
-                </div>
-                <!--<div class="input-group mb-3">-->
-                  <!--<div class="input-group-prepend">-->
-                    <!--<span class="input-group-text"><i class="fa fa-phone"></i></span>-->
-                  <!--</div>-->
-                  <!--<input type="text" formControlName="phonenumber" class="form-control" placeholder="Enter phonenumber.." [ngClass]="{ 'is-invalid': phoneValid}">-->
-                  <!--<div *ngIf="phoneValid" class="invalid-feedback">-->
-                    <!--<div *ngIf="phonenumber.errors.required">Phonenumber is required</div>-->
-                    <!--<div *ngIf="phonenumber.errors.pattern">Phonenumber is invalid</div>-->
-                  <!--</div>-->
-                <!--</div>-->
-                <button type="button" class="btn btn-block btn-success" (click)="forgotPass()">Forgot password</button>
-              </form>
-            </div>
-            <!--<div class="card-footer p-4">-->
-              <!--<div class="row">-->
-                <!--<div class="col-6">-->
-                  <!--<button class="btn btn-block btn-facebook" type="button"><span>facebook</span></button>-->
-                <!--</div>-->
-                <!--<div class="col-6">-->
-                  <!--<button class="btn btn-block btn-twitter" type="button"><span>twitter</span></button>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          </div>
-        </div>
+
+<div id="logreg-forms">
+  <form class="form-signup" [formGroup]="saveForm" (ngSubmit)="register()">
+    <div class="social-login">
+      <button class="btn facebook-btn social-btn" type="button"><span>
+        <i class="fab fa-facebook-f"></i>
+        Sign up with Facebook</span> </button>
+    </div>
+    <div class="social-login">
+      <button class="btn google-btn social-btn" type="button"><span>
+        <i class="fab fa-google-plus-g"></i>
+        Sign up with Google+</span> </button>
+    </div>
+
+    <p style="text-align:center">OR</p>
+    <div class="form-group row mr-15">
+      <input type="email" class="form-control" placeholder="Email address"
+             formControlName="email" required [ngClass]="{ 'is-invalid': emailValid}">
+      <div *ngIf="emailValid" class="invalid-feedback">
+        <div *ngIf="email.errors.required">Email is required</div>
+        <div *ngIf="email.errors.email">Email is invalid</div>
       </div>
     </div>
-  </main>
+
+    <div class="form-group row mr-15">
+      <input type="text" class="form-control" placeholder="Phone number"
+             formControlName="phone" required [ngClass]="{ 'is-invalid': phoneValid}">
+      <div *ngIf="phoneValid" class="invalid-feedback mr-b-15">
+        <div *ngIf="phone.errors.required">Phonenumber is required</div>
+        <div *ngIf="phone.errors.pattern">Phonenumber is invalid</div>
+      </div>
+    </div>
+
+    <div class="form-group row mr-15">
+      <input type="password" id="user-pass" class="form-control" placeholder="Password"
+             formControlName="password" required [ngClass]="{ 'is-invalid': passwordValid}">
+      <div *ngIf="passwordValid" class="invalid-feedback mr-b-15 ">
+        <div *ngIf="password.errors.required">Password is required</div>
+        <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
+      </div>
+    </div>
+
+    <div class="form-group row mr-15">
+      <input type="password" id="user-repeatpass" class="form-control" placeholder="Comfirm Password"
+             formControlName="comfirmPassword" required [ngClass]="{ 'is-invalid': comfirmPasswordValid}" >
+      <div *ngIf="comfirmPasswordValid" class="invalid-feedback mr-b-15">
+        <div *ngIf="comfirmPassword.errors.required">Confirm Password is required</div>
+        <div *ngIf="comfirmPassword.errors.mustMatch">Passwords must match</div>
+      </div>
+    </div>
+    <button class="btn btn-primary btn-block" type="submit"><i class="fas fa-user-plus"></i> Sign Up</button>
+    <a href="#" id="cancel_signup"><i class="fas fa-angle-left"></i> Back</a>
+  </form>
 </div>
+
