--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,10 +4,10 @@
       <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
       <div class="social-login">
         <button class="btn facebook-btn social-btn" type="button"><span>
-          <!--<i class="fab fa-facebook-f"></i>-->
+          <i class="fa fa-facebook-f"></i>
           Sign in with Facebook</span> </button>
         <button class="btn google-btn social-btn" type="button"><span>
-          <!--<i class="fab fa-google-plus-g"></i>-->
+          <i class="fa fa-google"></i>
           Sign in with Google+</span> </button>
       </div>
       <p style="text-align:center"> OR  </p>
@@ -15,13 +15,13 @@
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" formControlName="password" required>
 
       <button class="btn btn-success btn-block" type="submit">
-        <!--<i class="fas fa-sign-in-alt"></i>-->
+        <i class="fa fa-sign-in"></i>
         Sign in</button>
       <a href="#" id="forgot_pswd" (click)="forgotPass()">Forgot password?</a>
       <hr>
       <!-- <p>Don't have an account!</p>  -->
       <button class="btn btn-primary btn-block" type="button" id="btn-signup" routerLink="/register">
-        <!--<i class="fas fa-user-plus"></i>-->
+        <i class="fa fa-user-plus"></i>
         Sign up New Account</button>
     </form>
   </div>
