--- a/src/app/components/info-order/info-order.component.html
+++ b/src/app/components/info-order/info-order.component.html
@@ -1,17 +1,49 @@
-<div class="container">
-  <form>
-    <div class="contact-form">
-      <div class="contact-to">
-        <input type="text" class="text" value="Name..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name...';}">
-        <input type="text" class="text" value="Phone number..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}">
-        <input type="text" class="text" value="Address..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject...';}">
+<div class="container" style="margin-top: 20px">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h3 class="panel-title">Info your orders</h3>
+        </div>
+        <div class="panel-body">
+          <div *ngFor="let item of lstProducts">
+            <span>Product name: {{item?.name}}</span><br>
+            <span>Size: {{item?.size}}</span><br>
+            <span>Price: {{item.price | number}} VNĐ</span><br>
+            <span>Quantity: {{item?.quantity | number}}</span><br>
+            <span>Total: {{item?.quantity * item.price | number}}</span><br>
+            <hr>
+          </div>
+          <span>Total: {{total | number}}  VNĐ</span>
+        </div>
       </div>
-      <div class="text2">
-        <textarea value="Note:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Message..</textarea>
-      </div>
-      <span><input type="submit" class="" value="Send"></span>
-      <div class="clearfix"></div>
     </div>
-  </form>
+
+    <div class="col-md-6">
+      <form [formGroup]="saveForm" (ngSubmit)="buy()">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h3 class="panel-title">Info delivery</h3>
+          </div>
+          <div class="panel-body">
+            <div class="form-group row mr-15">
+            <textarea class="form-control" placeholder="Address" rows="3"
+                      formControlName="address" required [ngClass]="{ 'is-invalid': addressValid}"></textarea>
+                <div *ngIf="addressValid" class="invalid-feedback mr-b-15">
+                  <div *ngIf="address.errors.required">Address delevery is required</div>
+                </div>
+            </div>
+
+            <div class="form-group row mr-15">
+              <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-buy-n"></i> Buy</button>
+              <a href="#" id="cancel_signup" [routerLink]="['/cart']"><i class="fa fa-angle-left"></i> Back</a>
+            </div>
+          </div>
+
+        </div>
+
+      </form>
+    </div>
+  </div>
 </div>
 
