--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel *ngIf="lstSellingProduct">
   <ng-template ngbSlide *ngFor="let item of lstSellingProduct">
     <div class="picsum-img-wrapper">
-      <img style="max-width: 100%" src="assets/images/products/{{item.image}}" alt="Random first slide">
+      <img style="max-width: 100%" src="assets/images/products/{{item.image}}" alt="{{item.name}}">
     </div>
   </ng-template>
 </ngb-carousel>
