--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,6 +6,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 @import "../../../node_modules/font-awesome/css/font-awesome.css";
 
+.modal-open .modal{
+  opacity: 1 !important;
+}
+
 html, body{
   	font-family: 'Lato', sans-serif;
     font-size: 100%;
