--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -21,7 +21,7 @@
         <div class="product-price">
           <div class="product-price-left text-right">
             <span>{{product?.price | number}}</span>
-            <h5>{{product?.price*(1-product?.discount) | number}}$</h5>
+            <h5>{{product?.price*(1-product?.discount) | number}} VNĐ</h5>
           </div>
           <div class="product-price-right">
             <a href="#"><span> </span></a>
@@ -30,7 +30,7 @@
           <div class="clearfix"> </div>
         </div>
         <div class="product-price-details">
-          <p class="text-right">This is a new products made by {{product?.category.name}}. View below to details about products</p>
+          <p class="text-right">{{product.desciption}}</p>
           <a class="shipping" href="#"><span> </span>Free shipping</a>
           <div class="clearfix"> </div>
           <div class="product-size-qty">
@@ -83,31 +83,15 @@
             <div class="product-fea">
               <p>Code: {{product?.code}}</p>
               <p>Color: {{product?.color?.name}}</p>
-              <p>Size avalaible: {{product?.size}}</p>
-              <p>Producer: {{product?.producer?.name}} - {{product?.producer?.address}}</p>
+              <!--<p>Size avalaible: {{product?.size}}</p>-->
+              <p>Producer: {{product?.producer?.name}}</p>
               <p>Quantity availabel: {{product?.quantity}}</p>
             </div>
           </div>
         </app-my-tab>
         <app-my-tab [tabTitle]="'Customer reviews'">
           <div id="tab-3"  class="product-complete-info">
-            <!--<h3>DESCRIPTION:</h3>-->
-            <!--<p>With its beautiful premium leather, lace-up oxford styling, recycled rubber outsoles and 9-inch height, this Earthkeepers City Premium style is an undeniably handsome boot. To complement its rustic, commanding outer appearance, we've paid attention to the inside as well - by adding SmartWool® faux shearling to the linings and crafting the footbed using our exclusive anti-fatigue comfort foam technology to absorb shock. Imported.</p>-->
-            <!--<span>DETAILS:</span>-->
-            <!--<div class="product-fea">-->
-              <!--<p>100% organic cotton laces</p>-->
-              <!--<p>SmartWool® fabric-lined anti-fatigue footbed provides superior, all-day comfort and climate control</p>-->
-              <!--<p>Timberland® exclusive Gripstick™ and Green Rubber™ outsole is made with 42% recycled rubber</p>-->
-              <!--<p>Premium burnished full-grain leather and suede upper</p>-->
-              <!--<p>Leather is from a tannery rated Silver for its water, energy and waste-management practices</p>-->
-              <!--<p>Leather lining and footbed for a premium feel and optimal comfort</p>-->
-              <!--<p>SmartWool® faux shearling lining is made with 60% merino wool and 40% PET</p>-->
-              <!--<p>Reflective insole board for additional warmth under foot</p>-->
-              <!--<p>100% organic cotton laces</p>-->
-              <!--<p>SmartWool® fabric-lined anti-fatigue footbed provides superior, all-day comfort and climate control</p>-->
-              <!--<p>Timberland® exclusive Gripstick™ and Green Rubber™ outsole is made with 42% recycled rubber</p>-->
-            <!--</div>-->
-            Not review
+            No review
           </div>
         </app-my-tab>
       </app-my-tabs>
