Update shopping cart

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -51,7 +51,7 @@
           <h3>SELLING <span>PRODUCTS</span></h3>
         </div>
         <div class="s-products-head-right">
-          <a [routerLink]="['/product-list/', 0, '']"><span> </span>view all products</a>
+          <a [routerLink]="['/product-list/', 0, '', 0, 0]"><span> </span>view all products</a>
         </div>
         <div class="clearfix"> </div>
       </div>
