--- a/src/app/components/info-order/info-order.component.html
+++ b/src/app/components/info-order/info-order.component.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="form-group row mr-15">
-              <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-buy-n"></i> Buy</button>
+              <button class="btn btn-primary btn-block" type="submit" [disabled]="saveForm.invalid"><i class="fa fa-buy-n"></i> Buy</button>
               <a href="#" id="cancel_signup" [routerLink]="['/cart']"><i class="fa fa-angle-left"></i> Back</a>
             </div>
           </div>
