--- a/src/app/components/modal-comfirm/modal-comfirm.component.html
+++ b/src/app/components/modal-comfirm/modal-comfirm.component.html
@@ -6,8 +6,7 @@
   </button>
 </div>
 <div class="modal-body">
-    <div class="form-group row ml-4">
-      {{mess}}
+    <div class="form-group row ml-4" [innerHTML]="mess">
     </div>
 </div>
 <div class="modal-footer">
