--- a/src/app/components/default-layout/default-layout.component.css
+++ b/src/app/components/default-layout/default-layout.component.css
@@ -1,11 +1,11 @@
-.txt-info{
+.txt-info {
   color: white;
   margin-right: 100px;
 }
 
-.btn-logout{
+.btn-logout {
   color: floralwhite !important;
   font-size: 18px;
   margin-top: 10px;
-  cursor: pointer;
+  cursor: pointerß;
 }
