--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
       <div class="card">
         <div style="margin: 15px" class="card-header">
-          <label><i class="fa fa-shopping-cart">  SHOPPING CART</i></label>
+          <label><i class="fa fa-shopping-cart"> SHOPPING CART</i></label>
         </div>
         <div class="card-body">
           <table class="table table-striped table-sm">
@@ -15,7 +15,8 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let item of lstRs | slice: ((page-1) * pageSize) : ((page-1) * pageSize + pageSize); trackBy: trackByItems; let i =index">
+            <tr
+              *ngFor="let item of lstRs | slice: ((page-1) * pageSize) : ((page-1) * pageSize + pageSize); trackBy: trackByItems; let i =index">
               <td style="width: 50px; height: 80px;"><img width="100%" height="100%" class="img-avatar"
                                                           src="assets/images/products/{{item.image}}"></td>
               <td>{{item.name}}</td>
@@ -23,7 +24,8 @@
               <td>{{item.size}}</td>
               <td>
                 <label>
-                  <input class="input-quantity" type="text" [(ngModel)]="item.quantity" myCurrencyFormatter (ngModelChange)="changeQuantity($event, i)"/>
+                  <input class="input-quantity" type="text" [(ngModel)]="item.quantity" myCurrencyFormatter
+                         (ngModelChange)="changeQuantity($event, i)"/>
                 </label>
               </td>
               <td>
