--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,8 @@
       <div class="col-xs-4">
         <div class="top-row-col1 text-center">
           <h2>WOMAN</h2>
-          <img class="r-img text-center img-responsive" style="display: inline-block !important;" src="assets/images/img-w.jpg" title="name">
+          <img class="r-img text-center img-responsive" style="display: inline-block !important;" src="assets/images/img-w.jpg"
+               title="name">
           <span><img src="assets/images/objs1.png" title="name"></span>
           <h4>TOTAL</h4>
           <label>{{lstProductWoman?.length | number}} PRODUCTS</label>
@@ -20,7 +21,8 @@
       <div class="col-xs-4">
         <div class="top-row-col1 text-center">
           <h2>MAN</h2>
-          <img class="r-img text-center img-responsive" style="display: inline-block !important;" src="assets/images/man-r-img.jpg" title="name">
+          <img class="r-img text-center img-responsive" style="display: inline-block !important;" src="assets/images/man-r-img.jpg"
+               title="name">
           <span><img src="assets/images/objs2.png" title="name"></span>
           <h4>TOTAL</h4>
           <label>{{lstProductMan?.length | number}} PRODUCTS</label>
@@ -30,43 +32,48 @@
       <div class="col-xs-4">
         <div class="top-row-col1 text-center">
           <h2>KIDS</h2>
-          <img class="r-img text-center img-responsive" style="display: inline-block !important;" src="assets/images/kid-r-img.jpg" title="name">
+          <img class="r-img text-center img-responsive" style="display: inline-block !important;" src="assets/images/kid-r-img.jpg"
+               title="name">
           <span><img src="assets/images/objs3.png" title="name"></span>
           <h4>TOTAL</h4>
           <label>{{lstProductKids?.length | number}} PRODUCTS</label>
           <a class="r-list-w" [routerLink]="['/product-list/', 3, '', 0, 0]"><img src="assets/images/list-icon.png" title="list"></a>
         </div>
       </div>
-      <div class="clearfix"> </div>
+      <div class="clearfix"></div>
+    </div>
   </div>
-</div>
-<div class="container">
+  <div class="container">
     <!--<app-filter></app-filter>-->
-    <div class="clearfix"> </div>
+    <div class="clearfix"></div>
     <!-- //products ---->
     <!----speical-products---->
     <div class="special-products all-poroducts">
       <div class="s-products-head">
         <div class="s-products-head-left">
           <h3>SELLING <span>PRODUCTS</span></h3>
-        </div>
+        </div>ß
         <div class="s-products-head-right">
           <a [routerLink]="['/product-list/', 0, '', 0, 0]"><span> </span>view all products</a>
         </div>
-        <div class="clearfix"> </div>
+        <div class="clearfix"></div>
       </div>
       <div class="special-products-grids">
         <div class="col-md-3 special-products-grid text-center" *ngFor="let item of lstSellingProduct">
-          <a class="brand-name"  [routerLink]="['/product/',item.id]"><img src="assets/images/branch/b{{item.category.id}}.jpg"  title="name" /></a>
-          <a class="product-here" [routerLink]="['/product/',item.id]"><img src="assets/images/products/{{item.image}}" title="product-name" /></a>
+          <a class="brand-name" [routerLink]="['/product/',item.id]"><img src="assets/images/branch/b{{item.category.id}}.jpg"
+                                                                          title="name"/></a>
+          <a class="product-here" [routerLink]="['/product/',item.id]"><img src="assets/images/products/{{item.image}}"
+                                                                            title="product-name"/></a>
           <h4><a [routerLink]="['/product/',item.id]">{{item.name}}</a></h4>
-          <a class="product-btn" [routerLink]="['/product/',item.id]"><span>{{item.price}}</span><small>GET NOW</small><label> </label></a>
+          <a class="product-btn" [routerLink]="['/product/',item.id]"><span>{{item.price}}</span>
+            <small>GET NOW</small>
+            <label> </label></a>
         </div>
-        <div class="clearfix"> </div>
+        <div class="clearfix"></div>
       </div>
     </div>
 
   </div>
   <!----content---->
-<!----container---->
+  <!----container---->
 
