--- a/src/app/components/modal-comfirm/modal-comfirm.component.html
+++ b/src/app/components/modal-comfirm/modal-comfirm.component.html
@@ -1,14 +1,13 @@
-
 <div class="modal-header">
-  <h4 class="modal-title">Notification</h4>
+  <h4 class="modal-title">{{title}}</h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-    <div class="form-group row ml-4" [innerHTML]="mess">
-    </div>
+  <div class="form-group row ml-4" [innerHTML]="mess">
+  </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-sm btn-success" (click)="activeModal.close('Close click')"> OK</button>
+  <button type="button" style="text-align: center" class="btn btn-sm btn-success" (click)="activeModal.close('Close click')"> OK</button>
 </div>
