update format code

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -52,7 +52,7 @@
       <div class="s-products-head">
         <div class="s-products-head-left">
           <h3>SELLING <span>PRODUCTS</span></h3>
-        </div>ß
+        </div>
         <div class="s-products-head-right">
           <a [routerLink]="['/product-list/', 0, '', 0, 0]"><span> </span>view all products</a>
         </div>
