Update image groups

--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -25,7 +25,7 @@
           </div>
           <div class="product-price-right">
             <a href="#"><span> </span></a>
-            <label> save <b>{{product?.discount*100}}%</b></label>
+            <label> save <b>{{product.discount*100}}%</b></label>
           </div>
           <div class="clearfix"> </div>
         </div>
