--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -23,7 +23,7 @@
         <div class="producst-cate-grids">
           <div class="col-md-4 producst-cate-grid text-center">
             <h2>WOMAN</h2>
-            <img class="r-img text-center img-responsive" src="assets/images/img-w.jpg" title="name">
+            <img class="r-img text-center img-responsive" src="assets/images/groups/woman.jpg" title="name">
             <span><img src="assets/images/objs1.png" title="name"></span>
             <h4>TOTAL</h4>
             <label>{{lstProductWoman.length | number}} PRODUCTS</label>
@@ -31,7 +31,7 @@
           </div>
           <div class="col-md-4 producst-cate-grid text-center">
             <h2>MAN</h2>
-            <img class="r-img text-center img-responsive" src="assets/images/man-r-img.jpg" title="name">
+            <img class="r-img text-center img-responsive" src="assets/images/groups/man.jpg" title="name">
             <span><img src="assets/images/objs2.png" title="name"></span>
             <h4>TOTAL</h4>
             <label>{{lstProductMan.length | number}} PRODUCTS</label>
@@ -39,7 +39,7 @@
           </div>
           <div class="col-md-4 producst-cate-grid text-center">
             <h2>KIDS</h2>
-            <img class="r-img text-center img-responsive" src="assets/images/kid-r-img.jpg" title="name">
+            <img class="r-img text-center img-responsive" src="assets/images/groups/kid.jpg" title="name">
             <span><img src="assets/images/objs3.png" title="name"></span>
             <h4>TOTAL</h4>
             <label>{{lstProductKids.length | number}} PRODUCTS</label>
