--- a/src/app/components/info-order/info-order.component.html
+++ b/src/app/components/info-order/info-order.component.html
@@ -9,9 +9,9 @@
           <div *ngFor="let item of lstProducts">
             <span>Product name: {{item?.name}}</span><br>
             <span>Size: {{item?.size}}</span><br>
-            <span>Price: {{item.price | number}} VNĐ</span><br>
+            <span>Price: {{(1-item.discount) * item.price | number}} VNĐ</span><br>
             <span>Quantity: {{item?.quantity | number}}</span><br>
-            <span>Total: {{item?.quantity * item.price | number}}</span><br>
+            <span>Total: {{item?.quantity * (1-item.discount)*item.price | number}}</span><br>
             <hr>
           </div>
           <span>Total: {{total | number}}  VNĐ</span>
@@ -31,6 +31,13 @@
                       formControlName="address" required [ngClass]="{ 'is-invalid': addressValid}"></textarea>
               <div *ngIf="addressValid" class="invalid-feedback mr-b-15">
                 <div *ngIf="address.errors.required">Address delevery is required</div>
+              </div>
+            </div>
+            <div class="form-group row mr-15">
+            <input class="form-control" placeholder="Phone number" rows="3"
+                      formControlName="address" required [ngClass]="{ 'is-invalid': addressValid}"/>
+              <div *ngIf="addressValid" class="invalid-feedback mr-b-15">
+                <div *ngIf="address.errors.required">Phone number is required</div>
               </div>
             </div>
 
